...
            },
            onDelete = { viewData ->
                confirmDeleteLanguageDialogState = ConfirmDeleteLanguageDialogState.from(viewData)
            },
        )

        ConfirmDeleteLanguageDialog(
            state = { confirmDeleteLanguageDialogState },
            onDismissRequest = { confirmDeleteLanguageDialogState = null },
            onConfirm = { language ->
                confirmDeleteLanguageDialogState = null
                onDelete(language)
            },
        )

        ConfirmDownloadLanguageDialog(
            state = { confirmDownloadLanguageDialogState },
            onDismissRequest = { confirmDownloadLanguageDialogState = null },
            onConfirm = { language ->
                confirmDownloadLanguageDialogState = null
                onDownload(language)
            },
...
